[gd_scene load_steps=14 format=2]

[ext_resource path="res://sprites/sair.png" type="Texture" id=1]
[ext_resource path="res://sprites/tutorial.png" type="Texture" id=2]
[ext_resource path="res://sprites/jogarFINAL.png" type="Texture" id=3]
[ext_resource path="res://scenes/novo menu.gd" type="Script" id=4]
[ext_resource path="res://logo life is a game.png" type="Texture" id=5]
[ext_resource path="res://sprites/New Piskel (1).png" type="Texture" id=6]
[ext_resource path="res://sounds/MUSICA MENU.mp3" type="AudioStream" id=7]
[ext_resource path="res://sprites/soundIcon (1).png" type="Texture" id=8]
[ext_resource path="res://sprites/botao_jogar.png" type="Texture" id=9]
[ext_resource path="res://sprites/soundIcon (2).png" type="Texture" id=10]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}

[sub_resource type="Animation" id=2]
resource_name = "teste"
length = 4.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.8, 1.1, 1.4, 1.7, 2, 2.3, 2.6, 2.9, 3.2, 3.5, 3.8, 4.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 1, 2, 1, 2, 1, 2, 1, 2, 1, 2, 1, 2, 1, 2 ]
}

[sub_resource type="Animation" id=3]
resource_name = "teste2"
length = 4.5

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.369141
anchor_top = 0.483333
anchor_right = 0.339844
anchor_bottom = 0.73
margin_right = 512.0
margin_bottom = 300.0
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="JogarButton" type="TextureButton" parent="VBoxContainer"]
margin_right = 482.0
margin_bottom = 140.0
focus_neighbour_top = NodePath("../TutorialButton")
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 9 )

[node name="SairButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 144.0
margin_right = 482.0
margin_bottom = 284.0
rect_min_size = Vector2( 480, 0 )
texture_normal = ExtResource( 1 )

[node name="TutorialButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 288.0
margin_right = 482.0
margin_bottom = 448.0
focus_neighbour_bottom = NodePath("../JogarButton")
texture_normal = ExtResource( 2 )

[node name="LogoLifeIsAGame" type="Sprite" parent="."]
position = Vector2( 512, 175 )
scale = Vector2( 0.764, 0.764 )
texture = ExtResource( 5 )

[node name="BabyFrame01" type="Sprite" parent="."]
position = Vector2( 92.0001, 509 )
scale = Vector2( 0.3625, 0.3625 )
texture = ExtResource( 6 )
hframes = 2
vframes = 2
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="BabyFrame01"]
anims/RESET = SubResource( 1 )
anims/teste = SubResource( 2 )
anims/teste2 = SubResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true
bus = "SHAKIRA"

[node name="TextureButton" type="TextureButton" parent="."]
anchor_left = 0.0292969
anchor_top = 0.0566667
anchor_right = 0.0292969
anchor_bottom = 0.0566667
margin_left = 869.0
margin_top = -31.0
margin_right = 1129.0
margin_bottom = 159.0
rect_scale = Vector2( 0.5, 0.5 )
size_flags_horizontal = 0
keep_pressed_outside = true
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 10 )
texture_focused = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="VBoxContainer/JogarButton" to="." method="_on_JogarButton_pressed"]
[connection signal="pressed" from="VBoxContainer/SairButton" to="." method="_on_SairButton_pressed"]
[connection signal="pressed" from="VBoxContainer/TutorialButton" to="." method="_on_TutorialButton_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
